--- a/resources/language/resource.language.pl_pl/strings.po
+++ b/resources/language/resource.language.pl_pl/strings.po
@@ -1,144 +1,67 @@
-# KODI Media Center language file
-# Addon Name: Udemy
-# Addon id: plugin.video.udemy
-# Addon Provider: Matt Huisman
 msgid ""
-msgstr ""
-"Project-Id-Version:\n"
-"Report-Msgid-Bugs-To:\n"
-"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator:\n"
-"Language-Team:\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Language: en\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgctxt "#30001"
-msgid "My Courses"
-msgstr ""
-
-msgctxt "#30004"
-msgid "Udemy Email"
-msgstr ""
-
-msgctxt "#30005"
-msgid "Udemy Password"
-msgstr ""
-
-msgctxt "#30006"
-msgid "Failed to login with below error:\n"
-"{error_msg}"
-msgstr ""
-
-msgctxt "#30008"
-msgid "{title}\n\n"
-"{num_lectures} Lectures ({length})"
-msgstr ""
-
-msgctxt "#30009"
-msgid "Section {section_number}: {section_title}"
-msgstr ""
-
-msgctxt "#30010"
-msgid "No stream found"
-msgstr ""
-
-msgctxt "#30011"
-msgid "No Courses"
-msgstr ""
-
-msgctxt "#30012"
-msgid "Max Quality"
-msgstr ""
-
-msgctxt "#30013"
-msgid "144p"
-msgstr ""
-
-msgctxt "#30014"
-msgid "360p"
-msgstr ""
-
-msgctxt "#30015"
-msgid "480p"
-msgstr ""
-
-msgctxt "#30016"
-msgid "720p"
-msgstr ""
-
-msgctxt "#30017"
-msgid "1080p"
-msgstr ""
-
-msgctxt "#30018"
-msgid "Udemy Business Account"
-msgstr ""
-
-msgctxt "#30019"
-msgid "Organization Account Name"
 msgstr ""
 
 ##COMMON##
 
 msgctxt "#32000"
 msgid "You need to login to access this content"
-msgstr ""
+msgstr "Musisz się zalogować by mieć dostęp do tej zawartości"
 
 msgctxt "#32001"
 msgid "No default route found"
-msgstr ""
+msgstr "Nie znaleziono domyślnej ścieżki"
 
 msgctxt "#32002"
 msgid "Are you sure you want to clear this plugins data?"
-msgstr ""
+msgstr "Jesteś pewien, że chcesz wyczyścić dane wtyczki?"
 
 msgctxt "#32003"
 msgid "Clear Data OK"
-msgstr ""
+msgstr "Czyszczenie danych wykonane"
 
 msgctxt "#32004"
 msgid "Removed {delete_count} Cached Item"
-msgstr ""
+msgstr "Usunięto {delete_count} zapisanych pozycji"
 
 msgctxt "#32005"
 msgid "Clear Cache"
-msgstr ""
+msgstr "Czyść Cache"
 
 msgctxt "#32006"
 msgid "Could not find a function for url: {raw_url} => {parsed_url}"
-msgstr ""
+msgstr "Nie znaleziono funkcji dla linku: {raw_url} => {parsed_url}"
 
 msgctxt "#32007"
 msgid "Could not find a url for function: {function_name}"
-msgstr ""
+msgstr "Nie znaleziono linku dla funkcji: {function_name}"
 
 msgctxt "#32008"
 msgid "Inpustream Adaptive add-on required for Widevine playback\n"
 "Use the Kodi installer from the Kodi website instead"
-msgstr ""
+msgstr "Wtyczka Inputstream Adaptive jest wymagana do odtworzenia Widevine\n"
+"Użyj instalatora Kodi ze strony Kodi"
 
 msgctxt "#32009"
 msgid "Kodi Windows Store (UWP) version does not support Widevine DRM playback.\n"
 "Use the Kodi installer for Windows from the Kodi website instead."
-msgstr ""
+msgstr "Kodi Windows Store (UWP) nie obsługuje Widevine DRM.\n"
+"Użyj instalatora Kodi dla systemu Windows ze strony Kodi"
 
 msgctxt "#32010"
 msgid "Kodi 18 or higher required for Widevine DRM playback on {system}"
-msgstr ""
+msgstr "Kodi 18 lub wyższe jest wymagane dla Widevine DRM na {system}"
 
 msgctxt "#32011"
 msgid "ARM 64bit does not support Widevine DRM playback\n"
 "An OS with a 32-bit userspace is required.\n"
 "Try coreelec.org"
-msgstr ""
+msgstr "ARM 64bit nie wspiera Widevine DRM\n"
+"Inny OS środowiskiem 32-bit jest wymagany.\n"
+"Spróbuj coreelec.org"
 
 msgctxt "#32012"
 msgid "This system ({system}{arch} Kodi v{kodi_version}) does not yet support Widevine Playback"
-msgstr ""
+msgstr "Ten system ({system}{arch} Kodi v{kodi_version}) jeszcze nie wspiera Widevine DRM"
 
 msgctxt "#32013"
 msgid "Could not find a media source from Brightcove"
@@ -147,7 +70,8 @@ msgstr ""
 msgctxt "#32014"
 msgid "Downloading required file\n"
 "{url}"
-msgstr ""
+msgstr "Pobieranie potrzebnych plików\n"
+"{url}"
 
 msgctxt "#32015"
 msgid "Widevine DRM"
@@ -156,36 +80,38 @@ msgstr ""
 msgctxt "#32016"
 msgid "There was an unexpected error installing Widevine\n"
 "Please restart KODI and try again"
-msgstr ""
+msgstr "Wystąpił nieoczekiwany błąd instalacji Widevine\n"
+"Zrestartuj Kodi i spróbuj ponownie"
 
 msgctxt "#32017"
 msgid "Use Cache"
-msgstr ""
+msgstr "Używaj Cache"
 
 msgctxt "#32018"
 msgid "Inputstream Settings"
-msgstr ""
+msgstr "Ustawienia Inputstream"
 
 msgctxt "#32019"
 msgid "Clear Data"
-msgstr ""
+msgstr "Czyść Dane"
 
 msgctxt "#32020"
 msgid "Error"
-msgstr ""
+msgstr "Błąd"
 
 msgctxt "#32021"
 msgid "Install Widevine DRM"
-msgstr ""
+msgstr "Zainstaluj Widevine DRM"
 
 msgctxt "#32022"
 msgid "Widevine DRM Installed OK\n"
 "If videos do not play, please restart KODI and try again"
-msgstr ""
+msgstr "Widevine DRM Zainstalowano Prawidłowo\n"
+"Jeśli wideo sie nie odtwarza, zrestartuj KODI i sprobuj ponownie"
 
 msgctxt "#32023"
 msgid "Use Inputstream HLS"
-msgstr ""
+msgstr "Użyj Inputstream HLS"
 
 msgctxt "#32024"
 msgid "Login"
@@ -193,29 +119,34 @@ msgstr ""
 
 msgctxt "#32025"
 msgid "Logout"
-msgstr ""
+msgstr "Wyloguj"
 
 msgctxt "#32026"
 msgid "Settings"
-msgstr ""
+msgstr "Ustawienia"
 
 msgctxt "#32027"
 msgid "Are you sure you want to logout?"
-msgstr ""
+msgstr "Jesteś pewien, że chcesz się wylogować?"
 
 msgctxt "#32028"
 msgid "Failed to login.\n"
 "Check your details are correct and try again."
-msgstr ""
+msgstr "Nieudane logowanie\n"
+"Sprawdź dane i spróbuj ponownie"
 
 msgctxt "#32029"
 msgid "Search"
-msgstr ""
+msgstr "Szukaj"
 
 msgctxt "#32030"
 msgid "Search: {query}"
-msgstr ""
+msgstr "Szukaj: {query}"
 
 msgctxt "#32031"
 msgid "No Results"
+msgstr "Brak Rezultatów"
+
+msgctxt "#32032"
+msgid "Could not find a media source from Brightcove"
 msgstr ""
