--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -94,6 +94,10 @@ msgctxt "#30022"
 msgid "Utility"
 msgstr ""
 
+msgctxt "#30023"
+msgid "Next Page"
+msgstr ""
+
 ##COMMON##
 
 msgctxt "#32000"
@@ -254,4 +258,18 @@ msgstr ""
 
 msgctxt "#32037"
 msgid "Verify SSL Certs"
+msgstr ""
+
+msgctxt "#32038"
+msgid "Existing Widevine DRM found.\n"
+"Would you like to override it?"
+msgstr ""
+
+msgctxt "#32039"
+msgid "Service Start Delay (0 = Random 10s-60s)"
+msgstr ""
+
+msgctxt "#32040"
+msgid "MD5 checksum failed for file: {filename}\n"
+"{local_md5} != {remote_md5}"
 msgstr ""
