add new quality control

--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -51,7 +51,7 @@ msgid "No Courses"
 msgstr ""
 
 msgctxt "#30012"
-msgid "Max Quality"
+msgid "Default MP4 Quality"
 msgstr ""
 
 msgctxt "#30013"
@@ -109,11 +109,12 @@ msgid "No default route found"
 msgstr ""
 
 msgctxt "#32002"
-msgid "Are you sure you want to clear this plugins data?"
+msgid "Are you sure you want to reset this add-on?\n"
+"This will reset all settings and clear all data"
 msgstr ""
 
 msgctxt "#32003"
-msgid "Data Cleared"
+msgid "Reset Complete"
 msgstr ""
 
 msgctxt "#32004"
@@ -133,31 +134,31 @@ msgid "Could not find a url for function: {function_name}"
 msgstr ""
 
 msgctxt "#32008"
-msgid "Inpustream Adaptive add-on required for Widevine playback\n"
-"Use the Kodi installer from the Kodi website instead"
+msgid "Inpustream Adaptive add-on required for Widevine playback"
 msgstr ""
 
 msgctxt "#32009"
-msgid "Kodi Windows Store (UWP) version does not support Widevine DRM playback.\n"
-"Use the Kodi installer for Windows from the Kodi website instead."
+msgid "Kodi Windows Store (UWP) version does not support Widevine playback.\n"
+"Use the Kodi .exe installer from the Kodi website instead."
 msgstr ""
 
 msgctxt "#32010"
-msgid "Kodi 18 or higher required for Widevine DRM playback on {system}"
+msgid "Kodi 18 or higher required for Widevine playback on {system}"
 msgstr ""
 
 msgctxt "#32011"
-msgid "ARM 64bit does not support Widevine DRM playback\n"
+msgid "ARM 64bit does not support Widevine playback\n"
 "An OS with a 32-bit userspace is required.\n"
 "Try coreelec.org"
 msgstr ""
 
 msgctxt "#32012"
-msgid "This system ({system}{arch} Kodi v{kodi_version}) does not yet support Widevine Playback"
+msgid "This system ({system}{arch} Kodi v{kodi_version}) does not yet support Widevine playback"
 msgstr ""
 
 msgctxt "#32013"
-msgid "Could not find a media source from Brightcove"
+msgid "Could not find a media source from Brightcove\n"
+"Server Message: {error}"
 msgstr ""
 
 msgctxt "#32014"
@@ -166,11 +167,11 @@ msgid "Downloading required file\n"
 msgstr ""
 
 msgctxt "#32015"
-msgid "Widevine DRM"
+msgid "Widevine CDM"
 msgstr ""
 
 msgctxt "#32016"
-msgid "There was an unexpected error installing Widevine\n"
+msgid "There was an unexpected error installing the Widevine CDM\n"
 "Please restart KODI and try again"
 msgstr ""
 
@@ -183,19 +184,19 @@ msgid "Inputstream Settings"
 msgstr ""
 
 msgctxt "#32019"
-msgid "Clear Data"
+msgid "Reset Add-on"
 msgstr ""
 
 msgctxt "#32020"
-msgid "Error"
+msgid "{addon} - Error"
 msgstr ""
 
 msgctxt "#32021"
-msgid "Install Widevine DRM"
+msgid "Install Widevine CDM"
 msgstr ""
 
 msgctxt "#32022"
-msgid "Widevine DRM Installed OK\n"
+msgid "Widevine CDM Installed OK\n"
 "If videos do not play, please restart KODI and try again"
 msgstr ""
 
@@ -237,7 +238,7 @@ msgid "No Results"
 msgstr ""
 
 msgctxt "#32032"
-msgid "Unexpected Error :("
+msgid "{addon} - Unexpected Error"
 msgstr ""
 
 msgctxt "#32033"
@@ -261,8 +262,9 @@ msgid "Verify SSL Certs"
 msgstr ""
 
 msgctxt "#32038"
-msgid "Existing Widevine DRM found.\n"
-"Would you like to override it?"
+msgid "New Widevine CDM available!\n"
+"Using an old version may cause playback issues\n"
+"Download and override existing CDM?"
 msgstr ""
 
 msgctxt "#32039"
@@ -272,4 +274,104 @@ msgstr ""
 msgctxt "#32040"
 msgid "MD5 checksum failed for file: {filename}\n"
 "{local_md5} != {remote_md5}"
+msgstr ""
+
+msgctxt "#32041"
+msgid "No Items"
+msgstr ""
+
+msgctxt "#32042"
+msgid "Default Playback Quality"
+msgstr ""
+
+msgctxt "#32043"
+msgid "Best"
+msgstr ""
+
+
+msgctxt "#32048"
+msgid "Pass-through"
+msgstr ""
+
+msgctxt "#32049"
+msgid "No list item found that matches pattern: {pattern}"
+msgstr ""
+
+msgctxt "#32050"
+msgid "This add-on has moved\n"
+"A new add-on '{new_addon_id}' is therefore required\n"
+"Install and migrate to new add-on?"
+msgstr ""
+
+msgctxt "#32051"
+msgid "Add-on has been migrated\n"
+"Remember to uninstall this old version '{old_addon_id}'"
+msgstr ""
+
+msgctxt "#32052"
+msgid "Unknown Error"
+msgstr ""
+
+msgctxt "#32053"
+msgid "Play at Quality"
+msgstr ""
+
+msgctxt "#32054"
+msgid "Custom"
+msgstr ""
+
+msgctxt "#32055"
+msgid "Ask"
+msgstr ""
+
+msgctxt "#32056"
+msgid "Quality Set: {label}"
+msgstr ""
+
+msgctxt "#32057"
+msgid "Playback URL returned error code: {error_code}"
+msgstr ""
+
+msgctxt "#32059"
+msgid "Enter maximum bandwidth (bit/s)"
+msgstr ""
+
+msgctxt "#32060"
+msgid "Lowest"
+msgstr ""
+
+msgctxt "#32061"
+msgid "Playback Quality"
+msgstr ""
+
+msgctxt "#32062"
+msgid "Enable Quality Select"
+msgstr ""
+
+msgctxt "#32063"
+msgid "Live Play Action"
+msgstr ""
+
+msgctxt "#32064"
+msgid "From Start"
+msgstr ""
+
+msgctxt "#32065"
+msgid "From Live"
+msgstr ""
+
+msgctxt "#32066"
+msgid "Ask"
+msgstr ""
+
+msgctxt "#32067"
+msgid "Play From?"
+msgstr ""
+
+msgctxt "#32068"
+msgid "{bandwidth:.2f} Mbit/s {resolution} {fps}"
+msgstr ""
+
+msgctxt "#32069"
+msgid "{fps:.2f} FPS"
 msgstr ""
